[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
readme = "README.md"
name = "stm32-test1"
version = "0.1.0"

[features]
default = ["nucleo_f411"]
blue_pill = ["stm32f1"]
nucleo_f411 = ["stm32f4"]

[dependencies.stm32f1]
optional = true
version = "0"
features = ["stm32f103", "rt"]

[dependencies.stm32f4]
optional = true
version = "0"
features = ["stm32f411", "rt"]

[dependencies]
cortex-m = "0"
cortex-m-rt = "0"
panic-halt = "0"


# this lets you use `cargo fix`!
[[bin]]
name = "stm32-test1"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
